# office-cheer

./: .gitignore  README.md  main.py  plan.md  pyproject.toml  requirements.txt  todo.md
office_cheer/: cli.py  config.py  main.py
office_cheer/agents/: greeting_agent.py
office_cheer/db/: db_utils.py  models.py
office_cheer/services/: date_service.py  email_service.py  image_service.py
office_cheer/utils/: date_utils.py
scripts/: README.md  __init__.py  generate_data.py
tests/: conftest.py  test_date_service.py  test_date_utils.py  test_db_models.py
