[project]
name = "office-cheer"
version = "0.1.0"
description = "An agentic AI application for sending personalized greetings on staff birthdays and anniversaries"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Office Cheer Team"}
]

dependencies = [
    "strands-agents", 
    "strands-agents-tools",
    "schedule>=1.1.0",
    "boto3>=1.28.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.3",
    "sqlalchemy>=2.0.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.3.1",
    "pytest-mock>=3.10.0"
]

[project.scripts]
office-cheer = "office_cheer.cli:cli"
